fix align btn home page

--- a/template/scss/pages/_spt.scss
+++ b/template/scss/pages/_spt.scss
@@ -5051,9 +5051,9 @@
 
           .btn {
             margin-left: auto;
-            @include max(800px) {
-              margin-left: unset;
-            }
+            // @include max(800px) {
+            //   margin-left: unset;
+            // }
           }
           .num {
             &::after {
